--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,11 @@ jobs:
         with:
           ruby-version: '3.3' # Not needed with a .ruby-version file
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
+          working-directory: docs
           cache-version: 0 # Increment this number if you need to re-download cached gems
       - name: Build with Jekyll
+        working-directory: docs
         run: bundle exec jekyll build
+
+
+
